k8s/app/sampleapp/sampleapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    application: frontend
  # internalTrafficPolicy: Cluster
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
