k8s/app/sampleapp/sampleapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simpleapp-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: app.cluster.lab.net
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
            path: /
